--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "node_module": "^0.0.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2"
   },
